--- a/your-code/challenge-1_Completed.ipynb
+++ b/your-code/challenge-1_Completed.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "9       50       64     43           1      False  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "        'Rock', 'Fire', 'Electric', 'Normal', 'Bug']], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "Name: Name, Length: 800, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "-1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
        "19       80    145           1      False  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,20 +926,12 @@
     "\n",
     "pokemon['Name'] = pokemon['Name'].apply(clean_mega)\n",
     "\n",
-    "pokemon.head(20)\n",
-    "\n",
     "# test transformed data\n",
+    "pokemon.head(20)\n",
     "\n",
     "#if row doesnt have Mega the .find gives it -1 and the row is returned\n",
     "#if row has Mega give me everything where 'Mega' starts from until the end\n",
-    "#then using .apply to apply clean_mega to pokemon name\n",
-    "\n",
-    "\n",
-    "\n",
-    "#pokemon.Name = pokemon.Name.apply(lambda row: row[row.find('Mega'):] if row.find('Mega') != -1 else row)\n",
-    "#Go and find the pokemon name and apply lamba function which is a if else statement where if the name.find'Mega' \n",
-    "#is -1 then print the normal name but if its not -1 then we print the name starting from where the 'Mega' is found in name,\n",
-    "\n"
+    "#then using .apply to apply clean_mega to pokemon name"
    ]
   },
   {
@@ -953,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1208,7 @@
        "[800 rows x 14 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1298,7 @@
        "429      180       20    150           3       True        9.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1390,7 @@
        "230      5           2      False   0.043478  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1570,7 @@
        "4       50     65           1      False   1.209302          Fire  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1749,7 @@
        "348       95       40     95           3      False      3.000  Water-Dark  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1781,7 @@
        "['Psychic', 'Water-Dark', 'Bug-Poison', 'Rock']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1932,7 @@
        "Water-Dark  88.833333  63.500000  87.166667    3.166667   0.000000   2.291949  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
